feat: Consolidate IO into Module and top-level classes, also RenderableStack into Component